# LTX-2

./: .gitattributes  .gitignore  README.md  docker-compose.yml  stitch-dashboard.html
.claude/: settings.local.json
backend/: .env  .env.example  ltx_video.db  pyproject.toml  run.py
backend/app/: config.py  dependencies.py  main.py  models.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  ads.py  avatars.py  developer.py  export.py  folders.py  gallery.py  jobs.py  lora.py  marketplace.py  notifications.py  projects.py  prompts.py  referrals.py  scripts.py  social.py  upload.py  upscale.py  users.py  workspaces.py
backend/app/core/: ai_prompter.py  celery_app.py  email.py  moderation.py  product_scraper.py  prompt_engine.py  redis_client.py  runpod.py  s3.py  script_parser.py  security.py  tasks.py
frontend/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml  vercel.json
frontend/messages/: en.json  fr.json
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20260309193323_init_roles/: migration.sql
frontend/src/: proxy.ts
frontend/src/app/: global-error.tsx  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
frontend/src/app/[locale]/: error.tsx  globals.css  layout.tsx  not-found.tsx
frontend/src/i18n/: request.ts
frontend/src/shared/api/: api-client.ts  query-provider.tsx
frontend/src/shared/data/: seo-pages.ts
frontend/src/shared/lib/: auth-client.ts  auth.ts  navigation.ts  permissions.ts  (+1 more)
runpod_worker/: Dockerfile  handler.py
scripts/runpod_setup/: download_models.py  warmup_endpoint.py
(+149 files in other folders)
